# Kcockpit

./: .gitmodules
KockpitClient/: KockpitKalibrationTool.sh  pom.xml
KockpitClient/dependencies/javafx-jmods-14.0.1/: javafx.base.jmod  javafx.controls.jmod  javafx.fxml.jmod  javafx.media.jmod  javafx.swing.jmod
KockpitClient/src/krpc/core/: AnalogQueue.java  CommunicationManager.java  KRPCClient.java  Logger.java  Test.java
KockpitClient/src/krpc/jfx/: KockpitCalibrationTool.fxml  KockpitCalibrationTool.java
KockpitClient/src/main/java/: module-info.java
KockpitClient/src/main/java/kockpit/core/: AnalogQueue.java  CommTable.java  CommunicationManager.java  KRPCClient.java  Logger.java  SerialOverflowException.java  Test.java  UnknownOSException.java
KockpitClient/src/main/java/kockpit/jfx/: AnalogCalibrator.java  KockpitCalibrationTool.java
KockpitClient/src/main/java/kockpit/kalibration/: AnalogCalibrator.java  KockpitCalibrationTool.java
KockpitClient/src/main/java/kockpit/navball/: Circle.java  Main.java  NavBall.java  Quaternion.java
STM32/: CMakeLists.txt  platformio.ini
STM32/src/: Comm.cpp  Comm.h  InputsManager.cpp  InputsManager.h  Joystick.cpp  Joystick.h  Joystick3.cpp  Joystick3.h  OutputsManager.cpp  OutputsManager.h  PinMap.h  SerialManager.cpp  SerialManager.h  commTable.h  main.cpp  offsets.h  utils.h
STM32/src/MAX/: Bargraph.cpp  Bargraph.h  LED.cpp  LED.h  MAX7221.cpp  MAX7221.h  SevenSeg.cpp  SevenSeg.h
client/: build.gradle  kalibration.json
client/src/main/java/krpc/core/: AnalogQueue.java  CommTable.java  CommunicationManager.java  KRPCClient.java  Logger.java  SerialOverflowException.java  UnknownOSException.java
client/src/main/java/krpc/gui/: TextAreaPrintStream.java  window.form  window.java
client/src/main/java/krpc/jfx/: AnalogCalibrator.java  KockpitCalibrationTool.java
client/src/main/java/krpc/main/: AnalogQueue.java  CommTable.java  CommunicationManager.java  KRPCClient.java  Logger.java  SerialOverflowException.java  Test.java  UnknownOSException.java  WaitFor.java
ksp_gui/: build.gradle
ksp_gui/gradle/wrapper/: gradle-wrapper.properties
ksp_gui/src/main/java/krpc/client/: Main.java  Main.java.orig  UnknownOSException.java  WaitFor.java
server_STM32/: .gitignore  CMakeLists.txt  platformio.ini
server_STM32/lib/Bargraph/: Bargraph.cpp  Bargraph.h
server_STM32/lib/LED/: LED.cpp
server_STM32/lib/MAX7221/: MAX7221.cpp  MAX7221.h
server_STM32/lib/SevenSeg/: SevenSeg.cpp  SevenSeg.h
server_STM32/src/: Comm.cpp  Comm.h  InputsManager.cpp  InputsManager.h  OutputsManager.cpp  OutputsManager.h  PinMap.h  commTable.h  main.cpp  offsets.h
server_STM32/src/MAX/: MAX7221.cpp
server_teensy/src/: Bargraph.h  LED.cpp  LED.h  MAX7221.h  SevenSeg.cpp  SevenSeg.h
teensy/: CMakeLists.txt
teensy/src/: Bargraph.cpp  MAX7221.cpp  PinMap.h  main.cpp  utils.h
